--- a/index.html
+++ b/index.html
@@ -6,17 +6,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>psyyyych!</title>
+    <link rel="stylesheet" href="assets/css/style.css">
 </head>
 
 <body>
-    <h1>Psyyych</h1>
-    <p>Guess what letter I'm thinking of</p>
-    <p>Wins:</p>
-    <p>Losses:</p>
-    <p>Guesses Left:</p>
-    <span>Your Guessed:
-        <span id="letter-guessed"></span>
-    </span>
+    <div class="container">
+        <h1>Psyyych</h1>
+        <p>Guess what letter I'm thinking</p>
+        <div>Wins:
+            <span id="wins"></span>
+        </div>
+        <p>Losses:</p>
+        <div>Guessess Left:
+            <span id="guesses-left">12</span>
+        </div>
+
+        <div class="guessed">You Guessed:
+            <span id="letter-guessed"></span>
+        </div>
+    </div>
 
 
     <script src="assets/javascript/game.js"></script>
