added final touches

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 </head>
 
 <body>
+    <audio src="assets/audio/theme.mp3" controls autoplay loop></audio>
     <div class="container">
         <h1>Psyyych</h1>
         <p>Guess what letter I'm thinking</p>
